--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body{
 	
-	font-size: 160%
+	font-size: 100%
 
 
 }
@@ -25,6 +25,7 @@ color: white;
 width: 90%	
 }
 .button{
+	font-size: 2em; 
 background: black;
 width: 30.3%;
 margin:0 1.5%;
